Bug 430293 - "Open With" for folders missing in context menu
Summary: "Open With" for folders missing in context menu
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
: 430304 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-12-12 11:13 UTC by Christoph Feck
Modified: 2020-12-17 17:15 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.78
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2020-12-12 11:13:59 UTC
SUMMARY
"Open With" is missing in Dolphin context menus for folders.

STEPS TO REPRODUCE
1. install Dolphin and Konqueror from master branches
2. right-click any folder in Dolphin

OBSERVED RESULT
No "Open With > Konqueror" in context menu

EXPECTED RESULT
"Open With > Konqueror" in context menu

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.12.2

ADDITIONAL INFORMATION
Could be a Konqueror, KIO, or Dolphin issue. I am not sure if I have other applications installed that should have been shown in the context menu.
Comment 1 Christoph Feck 2020-12-12 11:15:29 UTC
Qt: 5.15.2
Comment 2 Christoph Feck 2020-12-12 11:23:04 UTC
I have Gwenview installed, and I think this used to be also showing up there, so I guess Konqueror changes aren't responsible for the regression.
Comment 3 Nate Graham 2020-12-15 16:13:28 UTC
I believe this was an intentional change, to reduce the humongous length of the context menu. On my setup, the only item in the "Open With" menu was Gwenview, which was redundant with the fileitemaction plugin. I guess you have Konqueror in yours.

I can understand that from your perspective this is a regression, but isn't it a pretty niche use case to use Dolphin to open a location in Konqueror?

We gotta keep the context menu's size reasonable somehow... :(
Comment 4 Christoph Feck 2020-12-15 21:01:07 UTC
Not sure which information you are requesting, but I use Konqueror's fsview mode a lot. Unfortunately, it cannot be embedded in Dolphin.
Comment 5 Nate Graham 2020-12-15 21:10:55 UTC
Maybe not, but someone requested in Bug 358860 that fsview be made accessible via the KMoreTools menu, which means you could get there by clicking the capacity bar in the bottom-right corner of the window.

Would that suffice for your use case?
Comment 6 Christoph Feck 2020-12-15 23:26:36 UTC
The actual "fsview" tool offers a lot less functionality compared to Konqueror. But this bug report isn't about Konqueror, it is about the missing menu item. A user could have configured many tools to open a folder, and if there is no way to access these tools, I predict the next cascade of bug reports.
Comment 7 Nate Graham 2020-12-15 23:34:52 UTC
Heh of course.

The problem is that a *lot* of people complain about how huge Dolphin's context menu is. So we started to tweak it and selectively remove some things, but whenever we do this, somebody else says, "But I used that!" There is an open MR to make the menu configurable which I expect to land soon, but that's not really an ideal solution since we would ideally offer a streamlined-yet-powerful experience out of the box, rather than making it a DIY thing.

What do you think, Méven?
Comment 8 Maxim 2020-12-16 09:51:57 UTC
(In reply to Nate Graham from comment #3)
> I believe this was an intentional change, to reduce the humongous length of
> the context menu. On my setup, the only item in the "Open With" menu was
> Gwenview, which was redundant with the fileitemaction plugin. I guess you
> have Konqueror in yours.
> 
> I can understand that from your perspective this is a regression, but isn't
> it a pretty niche use case to use Dolphin to open a location in Konqueror?
> 
> We gotta keep the context menu's size reasonable somehow... :(

A little question - https://bugs.kde.org/show_bug.cgi?id=430304 possibly is also intentional change or a real bug?
Comment 9 Nate Graham 2020-12-16 14:58:26 UTC
No, that one is unintentional. :)
Comment 10 Méven Car 2020-12-16 15:06:43 UTC
(In reply to Maxim from comment #8)
> (In reply to Nate Graham from comment #3)
> > I believe this was an intentional change, to reduce the humongous length of
> > the context menu. On my setup, the only item in the "Open With" menu was
> > Gwenview, which was redundant with the fileitemaction plugin. I guess you
> > have Konqueror in yours.
> > 
> > I can understand that from your perspective this is a regression, but isn't
> > it a pretty niche use case to use Dolphin to open a location in Konqueror?
> > 
> > We gotta keep the context menu's size reasonable somehow... :(
> 
> A little question - https://bugs.kde.org/show_bug.cgi?id=430304 possibly is
> also intentional change or a real bug?

That is not the same bug, although related to the same code.

Here the bug was caused by : https://invent.kde.org/frameworks/kio/-/commit/7787e497ad74676e412a9e6360171aef4660014d#51600055525abe6783ac71d35337895019a4eec4_367_341

Line `if (isDir || !isLocal) {` should be `if (isDir && !isLocal) {`
That's a classic mistake : !(a || b) == !a && !b where here we have !a || !b which is not equivalent.

To re-enable "Open With" for local folders.
Comment 11 Méven Car 2020-12-16 15:13:55 UTC
*** Bug 430304 has been marked as a duplicate of this bug. ***
Comment 12 Bug Janitor Service 2020-12-16 15:56:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/261
Comment 13 Ahmad Samir 2020-12-16 17:35:00 UTC
Git commit 2554ac647b7da4681c283d5c9cdce550aa295ecf by Ahmad Samir.
Committed on 16/12/2020 at 15:55.
Pushed by ngraham into branch 'master'.

KFileItemActions: fix condition, we want to exclude only remote dirs

Thanks to meven for the fix.

M  +3    -2    src/widgets/kfileitemactions.cpp

https://invent.kde.org/frameworks/kio/commit/2554ac647b7da4681c283d5c9cdce550aa295ecf