KFileItemActions: fix condition, we want to exclude only remote dirs

Thanks to meven for the fix.

BUG: 430293